<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.harelshaigal.madamal.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

       <fragment
        android:id="@+id/navigation_reports_map"
        android:name="com.harelshaigal.madamal.ui.mapDisplay.reportsMap.ReportsMapFragment"
        android:label="@string/title_reports_map"
        tools:layout="@layout/fragment_reports_map" />

       <fragment
        android:id="@+id/navigation_user_reports_list"
        android:name="com.harelshaigal.madamal.ui.userReportsList.UserReportListFragment"
        android:label="@string/title_user_reports_list"
        tools:layout="@layout/fragment_user_reports_list" />

       <fragment
        android:id="@+id/navigation_user_profile"
        android:name="com.harelshaigal.madamal.ui.userDispaly.userProfile.UserProfileFragment"
        android:label="@string/title_user_profile"
        tools:layout="@layout/fragment_user_profile" />

</navigation>