<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    tools:context=".ui.mapDisplay.reportMapDisplay.ReportMapDisplayFragment">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:id="@+id/bottom_sheet_drag_handle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/headerContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layoutDirection="rtl"
        app:layout_constraintBottom_toTopOf="@+id/report_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bottom_sheet_drag_handle">

        <LinearLayout
            android:id="@+id/actionButtonsContainer"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal|center_vertical"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/editReport"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="#00FFFFFF"
                android:contentDescription="@string/open_edit_report_window"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:icon="@drawable/baseline_edit_24"
                app:iconTint="@color/black"
                app:strokeColor="#A53636" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/deleteReport"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="#00FFFFFF"
                android:contentDescription="@string/open_delete_report_window"
                android:minHeight="48dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:icon="@drawable/baseline_delete_24"
                app:iconTint="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/reportHeaderDataLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:backgroundTint="#00FFFFFF"
            android:layoutDirection="rtl"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/report_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/palceholder_title"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/report_last_update_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/palceholder_date"
                android:textColor="@android:color/darker_gray"
                android:textSize="16sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/report_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/palceholder_title"
        android:textDirection="rtl"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/reportImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerContainer" />

    <ImageView
        android:id="@+id/reportImage"
        android:layout_width="275dp"
        android:layout_height="152dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/report_list_item_display_image"
        android:scaleType="fitCenter"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/report_data" />

</androidx.constraintlayout.widget.ConstraintLayout>
